[project]
name = "beatbouncer"
version = "0.1.0"
description = "Multi-signal classifier that scores MP3 tracks on club-worthiness. Combines Spotify audio features, librosa analysis, MusicBrainz tags, and a trained ML model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
]
